# whisper-scribe

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  audio_processor.py  bot.example.toml  bot.py  config.example.toml  config.py  docker-compose.yml  log_manager.py  log_to_text.py  pyproject.toml  refactor-plan.md  sink.py
.devcontainer/: .env.example  .gitignore  Dockerfile  Dockerfile.rocm  bnb.patch  devcontainer.json  docker-compose.cpu.yml  docker-compose.cuda.yml  docker-compose.rocm.yml  post-create.sh
docker/: Dockerfile  entrypoint.sh
js/: .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json
js/src/: audioUtils.ts  bot.ts  config.ts  debug.ts  gist.ts  index.ts  logs.ts  messages.ts  paths.ts  session.ts  userDirectory.ts  vad.ts  voiceReceiver.ts  websocketClient.ts  wrapup.ts
js/src/types/: node-vad.d.ts
py/: .gitignore  pyproject.toml
py/src/: audio.py  config.py  debug.py  devices.py  messages.py  segmenter.py  server.py  transcriber.py  vad.py  wrapup.py
py/tests/integration/: test_repetition_filter.py  test_transcriber_integration.py  test_transcriber_real.py
src/: audio_processor.py  bot.py  cli.py  config.py  debug_utils.py  github_gist.py  logging.py  patched_voice_client.py  processing.py  refiner.py  sink.py  transcriber.py  voice_capture_sink.py  waveform_utils.py  wrapup.py
src/tests/: filter-test.py  whisper-test.py
