[project]
name = "discord-stt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lawrence Forman",email = "me@merklejerk.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "transformers (>=4.0.0,<5.0.0)",
    "datasets[audio] (>=2.0.0,<3.0.0)",
    "accelerate (>=0.20.0,<1.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "silero-vad (>=5.1.2,<6.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "py-cord[voice] (>=2.6.1,<3.0.0)",
    "pip (>=25.1,<26.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
