[project]
name = "discord-stt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lawrence Forman",email = "me@merklejerk.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "transformers (>=4.0.0,<5.0.0)",
    "accelerate (>=0.20.0,<1.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "silero-vad (>=5.1.2,<6.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "py-cord[voice] (>=2.6.1,<3.0.0)",
    "pip (>=25.1,<26.0)",
    "datasets[audio] (>=3.5.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.debug.dependencies]
sounddevice = "^0.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
